Replace guided tour content with new version

--- a/guided_tour.html
+++ b/guided_tour.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Guided Tour (QA Enhanced) — מערכת דיווח שעות</title>
+    <title> מערכת דיווח פעילות</title>
     <style>
         :root {
             --tour-primary-color: #2563eb;
@@ -399,4 +399,5 @@
     }
     </script>
 </body>
+
 </html>
