Revise manager registration warning message
Updated warning message for manager registration with contact email.

--- a/homepage.html
+++ b/homepage.html
@@ -1485,7 +1485,7 @@
 
                 </select></div>
                 <div id="register-manager-warning" class="info-message" style="display:none; margin-top:10px;">
-                    ⚠️ שים/י לב! ההרשאות בפועל למנהל/ת ניתנות במערכת. אם את/ה לא באמת מנהל/ת לא תוכל/י להשתמש במערכת.
+                    ⚠️ שים/י לב! ההרשאות בפועל למנהל/ת ניתנות במערכת. לקבלת הרשאות ניהול פנו למייל - yehudah@volcani.agri.gov.il, אם את/ה לא באמת מנהל/ת לא תוכל/י להשתמש במערכת.
                 </div>
                 <div class="info-message" id="register-manager-selection-note" style="display:none; margin-top:10px; background:#e3f2fd; border-color:#2196f3; color:#1976d2;">
                     📋 בחירת מנהל/ת שלך תתבצע לאחר ההתחברות בעמוד "פרטי עובד"
