update message to allow users more then one week

--- a/homepage.html
+++ b/homepage.html
@@ -1451,6 +1451,15 @@
         </div>
 
     <div id="login-screen" class="auth-container">
+        <!-- הודעה זמנית על אפשרות דיווח בדיעבד - מעל כל החלון -->
+        <div class="info-message" style="margin-bottom: 25px; display: flex; align-items: start; gap: 10px;">
+            <span class="material-symbols-outlined" style="color: #0369a1; font-size: 24px;">info</span>
+            <div>
+                <strong>הודעה חשובה:</strong>
+                <p style="margin: 5px 0 0 0;">באופן חד-פעמי, ניתן כעת לדווח בדיעבד על תקופת החופשה - גם יותר משבוע אחורה. אנא השלימו את כל הדיווחים החסרים החל מתאריך ה 1 לאוקטובר.</p>
+            </div>
+        </div>
+
         <h2 style="text-align: center; margin-bottom: 30px;">כניסה למערכת</h2>
         <div class="auth-tabs">
             <button class="auth-tab active" onclick="switchAuthTab('login')">התחברות</button>
@@ -1508,6 +1517,15 @@
     </div>
 
     <div id="main-screen" class="container hidden">
+        <!-- הודעה זמנית על אפשרות דיווח בדיעבד -->
+        <div class="info-message" style="margin-bottom: 20px; display: flex; align-items: start; gap: 10px;">
+            <span class="material-symbols-outlined" style="color: #0369a1; font-size: 24px;">info</span>
+            <div>
+                <strong>הודעה חשובה:</strong>
+                <p style="margin: 5px 0 0 0;">באופן חד-פעמי, ניתן כעת לדווח בדיעבד על תקופת החופשה - גם יותר משבוע אחורה. אנא השלימו את כל הדיווחים החסרים החל מתאריך ה 1 לאוקטובר.</p>
+            </div>
+        </div>
+
         <div id="notifications"></div>
         <button class="btn" id="add-report-btn" onclick="addNewReport()">+ הוספת דיווח</button>
         <div id="messages" style="margin-top: 30px;">
