תיקון מלשון זכר ללשון זכר ונקבה
שינוי התנתק ל התנתק/י

--- a/admin-dashboard/manager_dashboard.html
+++ b/admin-dashboard/manager_dashboard.html
@@ -774,7 +774,7 @@
         </div>
         <div class="user-profile">
 
-            <button class="logout-btn" onclick="logout()" title="התנתק">התנתק</button>
+            <button class="logout-btn" onclick="logout()" title="התנתק/י">התנתק/י</button>
         </div>
     </div>
 
@@ -1776,4 +1776,5 @@
         }
     </script>
 </body>
+
 </html>
