תיקון מלשון זכר ללשון זכר ונקבה

--- a/homepage.html
+++ b/homepage.html
@@ -1435,7 +1435,7 @@
          <h1>מערכת דיווח פעילות - המכון להנדסת מערכות חקלאיות וביולוגיות</h1>
          <div class="header-actions">
              <div onclick="showScreen('main')" style="cursor: pointer;"><span class="material-symbols-outlined" aria-hidden="true">home</span></div>
-             <button id="logout-btn" onclick="logout()" style="display:none; background:#ef4444; color:white; border: 1px solid #ef4444; padding:6px 10px; border-radius:6px; cursor:pointer;">התנתק</button>
+             <button id="logout-btn" onclick="logout()" style="display:none; background:#ef4444; color:white; border: 1px solid #ef4444; padding:6px 10px; border-radius:6px; cursor:pointer;">התנתק/י</button>
          </div>
      </div>
 
