allow sunday also weekly report

--- a/guided_tour.html
+++ b/guided_tour.html
@@ -346,7 +346,7 @@
             },
             {
                 title: 'הוספת דיווח חדש',
-                text: 'הכפתור המרכזי לפתיחת טופס דיווח. <b>חשוב לדעת:</b> בימים א\'-ד\' תוכלו להוסיף דיווח <b>יומי-שעתי</b> בלבד. ביום חמישי, המערכת תציע לכם בחירה בין דיווח יומי לדיווח <b>שבועי</b> מרוכז.',
+                text: 'הכפתור המרכזי לפתיחת טופס דיווח. <b>חשוב לדעת:</b> בימים א\'-ד\' תוכלו להוסיף דיווח <b>יומי-שעתי</b> בלבד. ביום חמישי וביום ראשון, המערכת תציע לכם בחירה בין דיווח יומי לדיווח <b>שבועי</b> מרוכז.',
                 selector: '#add-report-btn',
             },
             {
@@ -377,7 +377,7 @@
             },
             {
                 title: 'כללים לדיווח שבועי 💡',
-                text: 'שימו לב: דיווח שבועי זמין <b>רק ביום חמישי</b>. בנוסף, אם כבר דיווחתם דיווחים יומיים במהלך השבוע, <b>לא תוכלו להגיש דיווח שבועי</b> עבור אותו שבוע ותצטרכו להמשיך בדיווח יומי.',
+                text: 'שימו לב: דיווח שבועי זמין <b>רק ביום חמישי וביום ראשון</b>. בנוסף, אם כבר דיווחתם דיווחים יומיים במהלך השבוע, <b>לא תוכלו להגיש דיווח שבועי</b> עבור אותו שבוע ותצטרכו להמשיך בדיווח יומי.',
                 selector: '.navigation',
                 position: 'bottom',
             },
