--- a/homepage.html
+++ b/homepage.html
@@ -1573,7 +1573,7 @@
             <span class="material-symbols-outlined" style="color: #0369a1; font-size: 24px;">info</span>
             <div>
                 <strong>הודעה חשובה:</strong>
-                <p style="margin: 5px 0 0 0;">באופן חד-פעמי, נית ן כעת לדווח בהיעדר על תקופת החופשה - בניגוד משבוע אחורה. אנא השלימו את כל הדיווחים החסרים החל מתאריך ה 1 לאוקטובר.</p>
+                <p style="margin: 5px 0 0 0;">באופן חד-פעמי, ניתן כעת לדווח בדיעבד  על יותר משבוע אחורה. אנא השלימו את כל הדיווחים החסרים החל מתאריך ה 1 לאוקטובר.</p>
             </div>
         </div>
 
