Add favicon links to homepage
Added favicon links for better browser support.

--- a/homepage.html
+++ b/homepage.html
@@ -10,10 +10,16 @@
     <title>מערכת דיווח פעילות - המכון להנדסת מערכות חקלאיות וביולוגיות</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://www.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://fonts.googleapis.com https://fonts.gstatic.com https://www.google-analytics.com; script-src 'self' 'unsafe-inline' https://www.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://apis.google.com https://work-report-volcani-default-rtdb.firebaseio.com https://*.firebaseio.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://www.google-analytics.com; connect-src 'self' https://work-report-volcani-default-rtdb.firebaseio.com wss://work-report-volcani-default-rtdb.firebaseio.com https://*.firebaseio.com wss://*.firebaseio.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://apis.google.com https://cdn.jsdelivr.net; frame-src 'self' https://accounts.google.com https://apis.google.com https://*.firebaseio.com https://work-report-volcani.firebaseapp.com https://*.firebaseapp.com;">
     <!-- X-Frame-Options must be set as an HTTP response header. Removed meta tag. -->
+
+    <!-- Favicon - multiple formats for better browser support -->
+    <link rel="icon" type="image/x-icon" href="/institute_icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/institute_icon.ico">
+    <link rel="icon" type="image/x-icon" href="/institute_icon.ico?v=2">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@300..700" rel="stylesheet">
-    <link rel="icon" href="institute_icon.ico" type="image/x-icon">
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
