--- a/admin-dashboard/manager_dashboard.html
+++ b/admin-dashboard/manager_dashboard.html
@@ -7,7 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="../institute_icon.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="../institute_icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../institute_icon.ico">
+    <link rel="icon" type="image/x-icon" href="../institute_icon.ico?v=2">
+    
     <style>
         * {
             margin: 0;
@@ -1779,3 +1782,4 @@
 </body>
 
 </html>
+
