--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/homepage.html" />
+    <meta http-equiv="refresh" content="0; url=homepage.html" />
     <meta charset="utf-8" />
     <title>Redirecting…</title>
+    <link rel="icon" type="image/x-icon" href="institute_icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="institute_icon.ico">
   </head>
   <body>
     <p>Redirecting to <a href="/homepage.html">/homepage.html</a>…</p>
