Update welcome text in homepage.html

--- a/homepage.html
+++ b/homepage.html
@@ -1564,8 +1564,8 @@
         <div>
             <img src="LOGO_4_english & hebrew.png" alt="Institute Logo" class="institute-logo">
 <p class="logo-welcome-text">
- ברוכים/ות הבאים/ות למערכת דיווח הפעילות של המכון להנדסת מערכות חקלאיות וביולוגיות.
-אנא התחבר/י או הירשם/י באמצעות המייל הארגוני שלך.
+ ברוכים וברוכות הבאים והבאות למערכת דיווח הפעילות של המכון להנדסת מערכות חקלאיות וביולוגיות.
+אנא התחברו או הירשמו באמצעות הדוא״ל הארגוני שלכם/ן.
 </p>
         </div>
     </div>
