Update welcome text in homepage.html

--- a/homepage.html
+++ b/homepage.html
@@ -1564,7 +1564,7 @@
         <div>
             <img src="LOGO_4_english & hebrew.png" alt="Institute Logo" class="institute-logo">
 <p class="logo-welcome-text">
- ברוכים וברוכות הבאים והבאות למערכת דיווח הפעילות של המכון להנדסת מערכות חקלאיות וביולוגיות.
+ ברוכים וברוכות הבאים/ות למערכת דיווח פעילות של המכון להנדסת מערכות חקלאיות וביולוגיות.
 אנא התחברו או הירשמו באמצעות הדוא״ל הארגוני שלכם/ן.
 </p>
         </div>
