--- a/admin-dashboard/manager_dashboard.html
+++ b/admin-dashboard/manager_dashboard.html
@@ -7,10 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../institute_icon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="../institute_icon.ico">
-    <link rel="icon" type="image/x-icon" href="../institute_icon.ico?v=2">
-    
+  <!-- Favicon - multiple formats for better browser support -->
+    <link rel="icon" type="image/png" href="../institute_icon.png">
+    <link rel="shortcut icon" type="image/png" href="../institute_icon.png">
+    <link rel="apple-touch-icon" href="../institute_icon.png">
+    <meta name="theme-color" content="#1e3a8a">
     <style>
         * {
             margin: 0;
@@ -786,7 +787,7 @@
         <div id="employees-screen" class="screen active">
             <h1 class="screen-title">עובדים פעילים</h1>
             <div class="employees-list" id="employees-list">
-                <div class="loading">טוען רשימת עובדים...</div>
+                <div class="loading">טוען רשימת עובדים/ות...</div>
             </div>
         </div>
 
@@ -1780,6 +1781,5 @@
         }
     </script>
 </body>
-
 </html>
 
