--- a/homepage.html
+++ b/homepage.html
@@ -12,9 +12,10 @@
     <!-- X-Frame-Options must be set as an HTTP response header. Removed meta tag. -->
 
     <!-- Favicon - multiple formats for better browser support -->
-    <link rel="icon" type="image/x-icon" href="/institute_icon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="/institute_icon.ico">
-    <link rel="icon" type="image/x-icon" href="/institute_icon.ico?v=2">
+    <link rel="icon" type="image/png" href="./institute_icon.png">
+    <link rel="shortcut icon" type="image/png" href="./institute_icon.png">
+    <link rel="apple-touch-icon" href="./institute_icon.png">
+    <meta name="theme-color" content="#1e3a8a">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
