--- a/admin-dashboard/manager_dashboard.html
+++ b/admin-dashboard/manager_dashboard.html
@@ -2,16 +2,19 @@
 <html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#1e3a8a">
     <title>מערכת דיווח שעות - ניהול</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <!-- Favicon - multiple formats for better browser support -->
-    <link rel="icon" type="image/png" href="../institute_icon.png">
-    <link rel="shortcut icon" type="image/png" href="../institute_icon.png">
-    <link rel="apple-touch-icon" href="../institute_icon.png">
-    <meta name="theme-color" content="#1e3a8a">
+    <link rel="icon" type="image/png" href="/institute_icon.png">
+    <link rel="shortcut icon" type="image/png" href="/institute_icon.png">
+    <link rel="apple-touch-icon" href="/institute_icon.png">
     <style>
         * {
             margin: 0;
