--- a/homepage.html
+++ b/homepage.html
@@ -6,16 +6,20 @@
 
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#1e3a8a">
     <title>מערכת דיווח פעילות - המכון להנדסת מערכות חקלאיות וביולוגיות</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://www.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://fonts.googleapis.com https://fonts.gstatic.com https://www.google-analytics.com; script-src 'self' 'unsafe-inline' https://www.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://apis.google.com https://work-report-volcani-default-rtdb.firebaseio.com https://*.firebaseio.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://www.google-analytics.com; connect-src 'self' https://work-report-volcani-default-rtdb.firebaseio.com wss://work-report-volcani-default-rtdb.firebaseio.com https://*.firebaseio.com wss://*.firebaseio.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://apis.google.com https://cdn.jsdelivr.net; frame-src 'self' https://accounts.google.com https://apis.google.com https://*.firebaseio.com https://work-report-volcani.firebaseapp.com https://*.firebaseapp.com;">
     <!-- X-Frame-Options must be set as an HTTP response header. Removed meta tag. -->
 
     <!-- Favicon - multiple formats for better browser support -->
-    <link rel="icon" type="image/png" href="./institute_icon.png">
-    <link rel="shortcut icon" type="image/png" href="./institute_icon.png">
-    <link rel="apple-touch-icon" href="./institute_icon.png">
-    <meta name="theme-color" content="#1e3a8a">
+    <link rel="icon" type="image/png" href="/institute_icon.png">
+    <link rel="shortcut icon" type="image/png" href="/institute_icon.png">
+    <link rel="apple-touch-icon" href="/institute_icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/institute_icon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
