--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta http-equiv="refresh" content="0; url=homepage.html" />
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#1e3a8a" />
     <title>Redirecting…</title>
-    <link rel="icon" type="image/x-icon" href="institute_icon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="institute_icon.ico">
+    <link rel="icon" type="image/png" href="/institute_icon.png">
+    <link rel="shortcut icon" type="image/png" href="/institute_icon.png">
+    <link rel="apple-touch-icon" href="/institute_icon.png">
   </head>
   <body>
     <p>Redirecting to <a href="/homepage.html">/homepage.html</a>…</p>
