--- a/homepage.html
+++ b/homepage.html
@@ -1580,7 +1580,7 @@
 
     <!-- Form Section -->
     <div class="form-section">
-        <!-- הודעה זמנית על אפשרות דיווח בהיעדר - מעל כל החלון -->
+        <!-- הודעה זמנית על אפשרות דיווח בדיעבד - מעל כל החלון -->
     <!--
         <div class="info-message" style="margin-bottom: 25px; display: flex; align-items: start; gap: 10px;">
             <span class="material-symbols-outlined" style="color: #0369a1; font-size: 24px;">info</span>
@@ -1647,13 +1647,13 @@
 
     <div id="main-screen" class="container hidden">
         <!-- הודעה זמנית על אפשרות דיווח בדיעבד -->
-        <div class="info-message" style="margin-bottom: 20px; display: flex; align-items: start; gap: 10px;">
+      <!--  <div class="info-message" style="margin-bottom: 20px; display: flex; align-items: start; gap: 10px;">
             <span class="material-symbols-outlined" style="color: #0369a1; font-size: 24px;">info</span>
             <div>
                 <strong>הודעה חשובה:</strong>
                 <p style="margin: 5px 0 0 0;">באופן חד-פעמי, ניתן כעת לדווח בדיעבד על תקופת החופשה - גם יותר משבוע אחורה. אנא השלימו את כל הדיווחים החסרים החל מתאריך ה 1 לאוקטובר.</p>
             </div>
-        </div>
+        </div>-->
 
         <div id="notifications"></div>
         <button class="btn" id="add-report-btn" onclick="addNewReport()">+ הוספת דיווח</button>
